Fix .sidePane covering dropout portions of BaseSourceSwitcher / SrsSelector / ScaleSelector in toolBar

--- a/src/Mapbender/CoreBundle/Resources/public/sass/template/fullscreen.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/template/fullscreen.scss
@@ -283,8 +283,6 @@ $tabSize: 32px;
 }
 
 .sidePane {
-  z-index: 20;
-
   &.notCollapsable {
     .sidePaneTabs {
       display: none;
